--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                     <p>Subscribe to the Expert mailing list to receive updates on new arrivals, special offers and other discount information.</p>
                 </div>
                 <div class="row">
-                    <div class="col-xl-6 offset-xl-3 col-lg-6 offset-lg-3">
+                    <div class="col-xl-6 offset-xl-3 col-lg-6 offset-lg-3 col-md-12 col-sm-12">
                         <div class="newsletter-form">
                             <form action="#">
                                 <input type="text">
